Fix results grid alignment

--- a/_scss/_uswds-theme-custom-styles.scss
+++ b/_scss/_uswds-theme-custom-styles.scss
@@ -664,11 +664,11 @@ blockquote {
   &__list {
     list-style-type: none;
     padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   &__item {
-    display: inline-block;
-    width: 32%;
     margin: 0 0 units(2);
     padding: units(2);
     text-align: center;
